<resources>
    <string name="app_name">UFC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="udemy_free_courses">Udemy Free Courses</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="start">Start!</string>
    <string name="get_free_udemy_courses">Get Free Udemy Courses</string>
    <string name="copy_text">Save the hassle of searching, have access\n to thousands of free Udemy courses\n based on their categories</string>
    <string name="sign_in_to_your_account">Sign In To Your Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="email_address">Email address</string>
    <string name="don_t_have_an_account">Don\'t have an account?<font color="#B24D41"><b><u>  Sign Up</u></b></font></string>
    <string name="did_not_receive_code">Didn\'t receive code?<font color="#B24D41"><b> Resend</b></font></string>
    <string name="already_have_an_account">Already have an account?<font color="#B24D41"><b><u>  Sign In</u></b></font></string>
    <string name="create_an_account">Create An Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="by_creating_an_account_you_agree_our_terms_and_privacy_policy">By creating an account you agree our <font color="#B24D41"><b>\nTerms</b></font> and <font color="#B24D41"><b>Privacy Policy</b></font></string>
    <string name="what_are_you_interested_in">What are you interested in?</string>
    <string name="select_up_to_3_categories">Select up to 3 categories</string>
    <string name="cont">Continue</string>
    <string name="design">Design</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_account_s_email_address">Enter your account\'s email address and a 5 digit code will be sent to you</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="verify_it_s_you">Verify it\'s you</string>
    <string name="enter_the_5_digit">Enter the 5 digit verification code that was sent to *******@gmail.com</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="change_my_password">Change my password</string>
    <string name="close_account">CLOSE ACCOUNT</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="jide_haruna">Jide Haruna</string>
    <string name="jide_haruna_mail_com">jide.haruna@mail.com</string>
    <string name="a_verification_link_sent">A verification link has just been sent to your email</string>
    <string name="verify">VERIFY</string>
    <string name="acct_settings">Account Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="change_pass">Change password</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="close_acct">Close account</string>
    <string name="help_support">Help and Support</string>
    <string name="about">About UFC</string>
    <string name="freq_asked">Frequently asked questions</string>
    <string name="share_app">Share the UFC app</string>
    <string name="sign_out">Sign out</string>
    <string name="version">UFC v1.0</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_courses_reminders">New courses reminders</string>
    <string name="wishlist_reminders">Wishlist reminders</string>
    <string name="receive_email_notifications">Receive email notifications</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="are_you_sure">Are you sure you want to close your account?</string>
    <string name="find_a_course">Find a course you want to learn</string>
    <string name="top_rated">Top rated</string>
    <string name="see_all"><u>See All</u></string>
    <string name="our_top_picks_for_you">Our top picks for you</string>
    <string name="courses_you_may_also_like">Courses you may also like</string>
    <string name="wishlist_a_course_to_see_them_here">Wishlist a course to see them here</string>
    <string name="web_client_id">644171417497-cb9j1968347b9p6q3911f6eil48r6h4b.apps.googleusercontent.com</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="send_instructions">Send Instructions</string>
</resources>