<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.profile.CloseAccountFragment">


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:navigationIcon="@drawable/ic_arrow_left_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/epilogue_regular"
            android:text="@string/close_acct"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </Toolbar>

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/epilogue_regular"
        android:text="@string/are_you_sure"
        android:textStyle="bold"
        android:textColor="@color/colorTextAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:hintEnabled="false"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        app:boxStrokeColor="@color/colorTextAlt"
        app:hintTextColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/label_first_name"
        app:layout_constraintTop_toBottomOf="@+id/label_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/epilogue_regular"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_address"
            android:textColorHint="@color/colorTextAlt"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_change_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        android:padding="@dimen/padding_12"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/epilogue_regular"
        android:text="@string/close_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>